--- a/src/data/Portfolio.yml
+++ b/src/data/Portfolio.yml
@@ -5,14 +5,14 @@ items:
   #  startDate: 2019-04-01 12:00:00
   #  endDate: 2019-04-01 12:00:00
   #  url:
-  #  image: //images/ruslan-bardash-351288-unsplash.jpg
+  #  image:
   #  description: >-
   - projectName: Procurement Services Division Time Machine Pilot
     client: AOT Technologies / Government of British Columbia
     startDate: 2019-03-01 12:00:00
     endDate: 2019-04-01 12:00:00
     url:
-    image: //images/ruslan-bardash-351288-unsplash.jpg
+    image:
     description: >-
       The Ministry of Citizens' Services, Procurement Services Division's TimeMachine system is an operationally
       critical application that provides time tracking and project information to support the Procurement Services
@@ -22,7 +22,7 @@ items:
     startDate: 2017-07-01 12:00:00
     endDate: 2019-02-01 12:00:00
     url:
-    image: //images/ruslan-bardash-351288-unsplash.jpg
+    image:
     description: >-
       Ideal is a automotive fintech startup (incubated in-house by a company called Interdynamix) whose main
       product offering is a SaaS-style machine-learning enhanced Business Intelligence platform for automotive
@@ -37,7 +37,7 @@ items:
     startDate: 2017-04-01 12:00:00
     endDate: 2017-04-01 12:00:00
     url:
-    image: //images/ruslan-bardash-351288-unsplash.jpg
+    image: /images/portfolio/bc-showcase-phobulous.png
     description: >-
       I designed a custom SPA-style mobile-friendly Asian-styled theme for their website featuring CSS
       animations and a custom menu component. A customized build of OpenCart is used on the backend for content
@@ -47,7 +47,7 @@ items:
     startDate: 2016-05-01 12:00:00
     endDate: 2016-11-01 12:00:00
     url:
-    image: //images/ruslan-bardash-351288-unsplash.jpg
+    image:
     description: >-
       Video Systems Entertainment Technology (VEST) is an Edmonton company that provides self-serve program
       kiosks to (horse/harness/greyhound) racetracks and off-track-betting sites in Canada, the US and the
@@ -63,7 +63,7 @@ items:
     startDate: 2016-05-01 12:00:00
     endDate: 2016-05-01 12:00:00
     url:
-    image: //images/ruslan-bardash-351288-unsplash.jpg
+    image: /images/portfolio/bc-showcase-jimmy-poblanos.png
     description: >-
       I designed a custom SPA-style mobile-friendly Mexican-styled theme for their website featuring completely
       custom artwork, parallax scrolling effects and a custom menu component. A customized build of OpenCart is
@@ -73,7 +73,7 @@ items:
     startDate: 2015-09-01 12:00:00
     endDate: 2016-04-01 12:00:00
     url:
-    image: //images/ruslan-bardash-351288-unsplash.jpg
+    image:
     description: >-
       Caffe Tech is an Edmonton based importer and distributor of premium (primarily Italian and Swiss)
       commercial and home coffee equipment which provides many popular Albertan establishments with their
@@ -91,7 +91,7 @@ items:
     startDate: 2015-08-01 12:00:00
     endDate: 2015-08-01 12:00:00
     url:
-    image: //images/ruslan-bardash-351288-unsplash.jpg
+    image: /images/portfolio/bc-showcase-cafe-leva.png
     description: >-
       I designed a custom SPA-style mobile-friendly Mexican-styled theme for their website featuring completely
       custom artwork, parallax scrolling effects and a custom menu component. A customized build of OpenCart is
@@ -101,7 +101,7 @@ items:
     startDate: 2015-05-01 12:00:00
     endDate: 2015-05-01 12:00:00
     url:
-    image: //images/ruslan-bardash-351288-unsplash.jpg
+    image:
     description: >-
       Corrpro provides corrosion control materials and services including - engineering, pipeline integrity,
       construction and protective coating inspection - throughout North America, Europe, the Middle East and
@@ -112,7 +112,7 @@ items:
     startDate: 2015-04-01 12:00:00
     endDate: 2015-04-01 12:00:00
     url:
-    image: //images/ruslan-bardash-351288-unsplash.jpg
+    image:
     description: >-
       Challenger Fleet Management Solutions specializes in long term vehicle rentals for industrial projects.
       I architected, designed and spearheaded the development of a custom fleet-management application which
@@ -125,7 +125,7 @@ items:
     startDate: 2015-01-01 12:00:00
     endDate: 2015-01-01 12:00:00
     url:
-    image: //images/ruslan-bardash-351288-unsplash.jpg
+    image: /images/portfolio/bc-showcase-caffe-tech.png
     description: >-
       Caffe Tech is an Edmonton based importer and distributor of premium (primarily Italian and Swiss)
       commercial and home coffee equipment which provides many popular Albertan establishments with their
@@ -140,7 +140,7 @@ items:
     startDate: 2013-08-01 12:00:00
     endDate: 2014-11-01 12:00:00
     url:
-    image: //images/ruslan-bardash-351288-unsplash.jpg
+    image:
     description: >-
       The Alberta Motor Association was looking to replace its legacy and end-of-life ‘FrontTier’ insurance
       policy management system with an in-house, web-based application and backend service network.
@@ -155,7 +155,7 @@ items:
     startDate: 2013-05-01 12:00:00
     endDate: 2013-05-01 12:00:00
     url:
-    image: //images/ruslan-bardash-351288-unsplash.jpg
+    image:
     description: >-
       The Alberta Motor Association needed a new web-based and mobile friendly system to provide customers with
       customized home and tenant insurance quotes. The new application replaced their legacy web application,
@@ -169,7 +169,7 @@ items:
     startDate: 2013-03-01 12:00:00
     endDate: 2013-03-01 12:00:00
     url:
-    image: //images/ruslan-bardash-351288-unsplash.jpg
+    image:
     description: >-
       The Alberta Motor Association needed a new web-based and mobile friendly system to provide customers with
       customized automobile insurance quotes. The new application replaced their legacy web application,
@@ -183,7 +183,7 @@ items:
     startDate: 2012-03-01 12:00:00
     endDate: 2012-03-01 12:00:00
     url:
-    image: //images/ruslan-bardash-351288-unsplash.jpg
+    image: /images/portfolio/bc-showcase-carsgone.png
     description: >-
       CarsGone is an Edmonton-based, nationally spanning automotive classifieds magazine and website with a
       print distribution network across Alberta and Ontario. At the time, they had over 90,000 vehicles from
@@ -198,7 +198,7 @@ items:
     startDate: 2011-11-01 12:00:00
     endDate: 2011-11-01 12:00:00
     url:
-    image: //images/ruslan-bardash-351288-unsplash.jpg
+    image: /images/portfolio/bc-showcase-spasation.png
     description: >-
       Spasation is an Alberta-based chain of spas/salons. Uses a customized build of OpenCart for content and product
       management.
@@ -207,7 +207,7 @@ items:
     startDate: 2011-09-01 12:00:00
     endDate: 2011-09-01 12:00:00
     url:
-    image: //images/ruslan-bardash-351288-unsplash.jpg
+    image: /images/portfolio/bc-showcase-rmg-selection.png
     description: >-
       RMG Selection is an award-winning, China-focused international recruitment and HR consultancy business with over
       30 offices around the world. I designed, developed and helped maintain the RMG Selection’s HR recruitment website
@@ -218,7 +218,7 @@ items:
     startDate: 2011-06-01 12:00:00
     endDate: 2011-06-01 12:00:00
     url:
-    image: //images/ruslan-bardash-351288-unsplash.jpg
+    image:
     description: >-
       Active 24 is an independent pan-European provider of Internet hosting services. The company focuses on providing
       small and medium-sized companies and private individuals with hosted solutions that combine scalable and
@@ -228,7 +228,7 @@ items:
     startDate: 2011-04-01 12:00:00
     endDate: 2011-04-01 12:00:00
     url:
-    image: //images/ruslan-bardash-351288-unsplash.jpg
+    image:
     description: >-
       Founded in Bangkok in 1993 by a team of German and Thai entrepreneurs, SoftControl delivers IT services and
       solutions to more than 200 local and international customers including small and medium size companies as well as
@@ -241,7 +241,7 @@ items:
     startDate: 2010-09-01 12:00:00
     endDate: 2010-09-01 12:00:00
     url:
-    image: //images/ruslan-bardash-351288-unsplash.jpg
+    image:
     description: >-
       Developed a business card publishing plugin for WordPress CMS with features including AJAX WYSIWYG editing,
       custom file upload and placement, live style editing, adjustable print resolution output, image processing via GD
@@ -251,7 +251,7 @@ items:
     startDate: 2010-06-01 12:00:00
     endDate: 2010-06-01 12:00:00
     url:
-    image: //images/ruslan-bardash-351288-unsplash.jpg
+    image:
     description: >-
       Designed and implemented a custom e-commerce theme and several extensions for the OpenCart e-commerce system.
   - projectName: Gorilla Print UK E-Commerce Website
@@ -259,7 +259,7 @@ items:
     startDate: 2010-04-01 12:00:00
     endDate: 2010-04-01 12:00:00
     url:
-    image: //images/ruslan-bardash-351288-unsplash.jpg
+    image:
     description: >-
       Designed and implemented a custom e-commerce theme and several extensions for the OpenCart e-commerce system.
       Customizations include a one-step checkout system as well a publishing plugin for OpenCart with features including
@@ -270,7 +270,7 @@ items:
     startDate: 2010-01-01 12:00:00
     endDate: 2010-01-01 12:00:00
     url:
-    image: //images/ruslan-bardash-351288-unsplash.jpg
+    image:
     description: >-
       Designed and implemented a custom e-commerce theme and several extensions for the OpenCart e-commerce system.
       Customizations include a one-step checkout system as well as a custom payment extension for ‘Thai e-Payments’.
@@ -279,7 +279,7 @@ items:
     startDate: 2009-08-01 12:00:00
     endDate: 2009-08-01 12:00:00
     url:
-    image: //images/ruslan-bardash-351288-unsplash.jpg
+    image:
     description: >-
       BincVFX was a boutique visual effects studio in Bangkok, Thailand. I designed a custom website that integrated
       with their custom asset management platform, which was largely based on a project I helped contribute to called
@@ -289,7 +289,7 @@ items:
     startDate: 2009-03-01 12:00:00
     endDate: 2009-03-01 12:00:00
     url:
-    image: //images/ruslan-bardash-351288-unsplash.jpg
+    image:
     description: >-
       Kantana PCL (Public Company Limited) is Thailand's largest media organization. I was contracted to redesign their
       animation studio’s website to correspond with the release of Khan Kluay 2 (a domestic CG movie featuring a family
@@ -300,7 +300,7 @@ items:
     startDate: 2008-10-01 12:00:00
     endDate: 2008-10-01 12:00:00
     url:
-    image: //images/ruslan-bardash-351288-unsplash.jpg
+    image:
     description: >-
       R1 Club was a membership-based luxury vehicle/yacht rental club in Thailand, Malaysia and Singapore. I designed a
       custom theme and several custom extensions for Joomla CMS, including extensions for managing photo/video assets,
@@ -310,7 +310,7 @@ items:
     startDate: 2008-07-01 12:00:00
     endDate: 2008-07-01 12:00:00
     url:
-    image: //images/ruslan-bardash-351288-unsplash.jpg
+    image:
     description: >-
       LUXE was a membership-based publication targeting haute-couture in South East Asia. I designed a custom theme and
       several custom extensions for Joomla CMS, including extensions for managing photo/video assets, and a custom-made
@@ -320,7 +320,7 @@ items:
     startDate: 2008-04-01 12:00:00
     endDate: 2008-04-01 12:00:00
     url:
-    image: //images/ruslan-bardash-351288-unsplash.jpg
+    image:
     description: >-
       I designed a custom theme and several custom extensions for Joomla CMS, including extensions for managing
       photo/video assets.
