--- a/src/data/Hero.yml
+++ b/src/data/Hero.yml
@@ -5,7 +5,7 @@ items:
       We’re about software. Software is about people.
     description: >-
       We have a long history of designing and developing amazing experiences for iOS, Android, and Responsive Web. We’re a team of industry leading experts who create solutions and build applications using cutting edge technology to help your business succeed. We love what we do and it shows in our work.
-    image: /images/banners/responsive-banner-jimmy-poblanos.png
+    image: /images/heroes/blue-collar-home-hero-cool.jpg
     link: "/company"
     linkText: Our Story
     caption:
