--- a/src/data/Portfolio.yml
+++ b/src/data/Portfolio.yml
@@ -42,6 +42,31 @@ items:
       I designed a custom SPA-style mobile-friendly Asian-styled theme for their website featuring CSS
       animations and a custom menu component. A customized build of OpenCart is used on the backend for content
       and product management.
+  - projectName: Caffe Tech Inventory Management and Data Bridge
+    client: Caffe Tech 2004 Ltd.
+    startDate: 2015-09-01 12:00:00
+    endDate: 2016-04-01 12:00:00
+    url:
+    image: /images/portfolio/bc-showcase-app-quickcommerce.png
+    description: >-
+      Caffe Tech is an Edmonton based importer and distributor of premium (primarily Italian and Swiss)
+      commercial and home coffee equipment which provides many popular Albertan establishments with their
+      restaurant and coffee making equipment.
+  
+      Caffe Tech required a tablet-based point-of-sale app, supporting peripheral devices including
+      Star Micronics point-of-sale equipment, that would integrate with their existing e-commerce/accounting
+      APIs, and replace their existing PixelPoint point-of-sale systems. Supported peripheral devices included
+      Star Micronics Bluetooth and Wireless cash drawers, ticket and receipt printers, and barcode scanners.
+  - projectName: Baan Saowanee
+    client: Baan Saowanee
+    startDate: 2015-09-01 12:00:00
+    endDate: 2016-04-01 12:00:00
+    url:
+    image: /images/portfolio/bc-showcase-app-baansao.png
+    description: >-
+      Baan Saowanee is a collection of holiday home rentals situated on the north side of Ko Samui island,
+      a short 2 minute drive to scenic Mae Nam Beach. Baan Saowanee guests have a range of rental options to choose
+      from, dependent upon the number of persons and quality of accommodation.
   - projectName: VEST Tablet & Kiosk Apps
     client: Video Entertainment Systems Technology Ltd.
     startDate: 2016-05-01 12:00:00
