--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -38,7 +38,7 @@ collections:
               - { label: "Meta Keywords", name: "metaKeywords", widget: "string" }
               - { label: "Meta Description", name: "metaDescription", widget: "text" }
               - { label: "Summary", name: "summary", widget: "text" }
-              - { label: "Description", name: "description", widget: "text" }
+              - { label: "Description", name: "description", widget: "markdown" }
 
       - name: "home"
         label: "Home"
@@ -53,7 +53,7 @@ collections:
             fields:
               - { label: "Title", name: "title", widget: "string" }
               - { label: "Summary", name: "summary", widget: "text" }
-              - { label: "Description", name: "description", widget: "text" }
+              - { label: "Description", name: "description", widget: "markdown" }
               - { label: "Link", name: "link", widget: "string" }
               - { label: "Link Text", name: "linkText", widget: "string" }
           - name: "processSteps"
@@ -61,7 +61,7 @@ collections:
             widget: "list"
             fields:
               - { label: "Title", name: "title", widget: "string" }
-              - { label: "Description", name: "description", widget: "text" }
+              - { label: "Description", name: "description", widget: "markdown" }
 
       - name: "company"
         label: "Company"
@@ -76,7 +76,7 @@ collections:
             fields:
               - { label: "Title", name: "title", widget: "string" }
               - { label: "Summary", name: "summary", widget: "text" }
-              - { label: "Description", name: "description", widget: "text" }
+              - { label: "Description", name: "description", widget: "markdown" }
 
       - name: "services"
         label: "Services"
@@ -94,7 +94,7 @@ collections:
               - { label: "Meta Keywords", name: "metaKeywords", widget: "string" }
               - { label: "Meta Description", name: "metaDescription", widget: "text" }
               - { label: "Summary", name: "summary", widget: "text" }
-              - { label: "Description", name: "description", widget: "text" }
+              - { label: "Description", name: "description", widget: "markdown" }
               - name: "hero"
                 label: "Hero"
                 widget: "list"
@@ -107,7 +107,7 @@ collections:
                       - { label: "ID", name: "id", widget: "string" }
                       - { label: "Title", name: "title", widget: "string" }
                       - { label: "Subtitle", name: "subtitle", widget: "string" }
-                      - { label: "Description", name: "description", widget: "text" }
+                      - { label: "Description", name: "description", widget: "markdown" }
                       - { label: "Link", name: "link", widget: "string" }
                       - { label: "Link Text", name: "linkText", widget: "string" }
                       - { label: "Image", name: "image", widget: "string" }
@@ -125,7 +125,7 @@ collections:
                       - { label: "ID", name: "id", widget: "string" }
                       - { label: "Title", name: "title", widget: "string" }
                       - { label: "Subtitle", name: "subtitle", widget: "string" }
-                      - { label: "Description", name: "description", widget: "text" }
+                      - { label: "Description", name: "description", widget: "markdown" }
                       - { label: "Link", name: "link", widget: "string" }
                       - { label: "Link Text", name: "linkText", widget: "string" }
                       - { label: "Image", name: "image", widget: "string" }
@@ -145,7 +145,7 @@ collections:
             fields:
               - { label: "Title", name: "title", widget: "string" }
               - { label: "Summary", name: "summary", widget: "text" }
-              - { label: "Description", name: "description", widget: "text" }
+              - { label: "Description", name: "description", widget: "markdown" }
 
       - name: "portfolio"
         label: "Portfolio"
@@ -178,7 +178,7 @@ collections:
               - { label: "ID", name: "id", widget: "string" }
               - { label: "Title", name: "title", widget: "string" }
               - { label: "Subtitle", name: "subtitle", widget: "string" }
-              - { label: "Description", name: "description", widget: "text" }
+              - { label: "Description", name: "description", widget: "markdown" }
               - { label: "Link", name: "link", widget: "string" }
               - { label: "Link Text", name: "linkText", widget: "string" }
               - { label: "Image", name: "image", widget: "string" }
@@ -197,7 +197,7 @@ collections:
               - { label: "ID", name: "id", widget: "string" }
               - { label: "Title", name: "title", widget: "string" }
               - { label: "Subtitle", name: "subtitle", widget: "string" }
-              - { label: "Description", name: "description", widget: "text" }
+              - { label: "Description", name: "description", widget: "markdown" }
               - { label: "Link", name: "link", widget: "string" }
               - { label: "Link Text", name: "linkText", widget: "string" }
               - { label: "Image", name: "imagePath", widget: "string" }
@@ -248,7 +248,7 @@ collections:
           - { label: "Meta Keywords", name: "metaKeywords", widget: "string" }
           - { label: "Meta Description", name: "metaDescription", widget: "text" }
           - { label: "Summary", name: "summary", widget: "text" }
-          - { label: "Description", name: "description", widget: "text" }
+          - { label: "Description", name: "description", widget: "markdown" }
 
       - name: "socialmedia"
         label: "Social Media"
